--- a/public/scrollbar.css
+++ b/public/scrollbar.css
@@ -1,15 +1,15 @@
 body::-webkit-scrollbar-track {
-  border-radius: 0px;
-  background-color: #f5f5f5;
+  borderRadius: 0px;
+  backgroundColor: #f5f5f5;
 }
 
 body::-webkit-scrollbar {
   width: 10px;
-  background-color: white;
+  backgroundColor: white;
 }
 
 body::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background-color: rgb(128, 128, 128, 0.5);
+  borderRadius: 10px;
+  backgroundColor: rgb(128, 128, 128, 0.5);
 }
 
